--- a/css/default.css
+++ b/css/default.css
@@ -3431,6 +3431,9 @@ body.blog-page #markdownBody .annotation .collapse.file-include-collapse {
 	border-right: 1px solid var(--GW-aux-links-collapse-border-color);
 }
 
+body.page-blog-index #markdownBody .collapse.expanded .annotation p.data-field.title {
+	font-size: 1.25em;
+}
 
 /****************/
 /* X OF THE DAY */
