--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -4592,6 +4592,9 @@ body.blog-page #markdownBody .annotation .collapse.file-include-collapse {
 	border-right: 1px solid var(--GW-aux-links-collapse-border-color);
 }
 
+body.page-blog-index #markdownBody .collapse.expanded .annotation p.data-field.title {
+	font-size: 1.25em;
+}
 
 /****************/
 /* X OF THE DAY */
