Fix bug in build script

--- a/css/fonts-GENERATED.css
+++ b/css/fonts-GENERATED.css
@@ -257,6 +257,17 @@
 	font-display: swap;
 }
 
+/*******************/
+/* LIBERTINUS MONO */
+/*******************/
+
+@font-face {
+	font-family: 'Libertinus Mono';
+	font-weight: normal;
+	src: url('/static/font/libertinus/LibertinusMono-Regular.otf') format('opentype');
+	font-display: swap;
+}
+
 /************************/
 /* DEUTSCHE ZIERSCHRIFT */
 /************************/
