--- a/css/initial.css
+++ b/css/initial.css
@@ -1744,6 +1744,15 @@ figure.width-full {
 }
 
 
+/****************/
+/* OTHER LAYOUT */
+/****************/
+
+.clear-floats {
+	clear: both;
+}
+
+
 /*********/
 /* LINKS */
 /*********/
