--- a/css/head-VERSIONED.css
+++ b/css/head-VERSIONED.css
@@ -1763,6 +1763,15 @@ figure.width-full {
 }
 
 
+/****************/
+/* OTHER LAYOUT */
+/****************/
+
+.clear-floats {
+	clear: both;
+}
+
+
 /*********/
 /* LINKS */
 /*********/
