Tiny CSS refactor

--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -4030,10 +4030,6 @@ a.footnote-back {
         opacity 0.25s ease-out,
         transform 0.25s ease-out;
 }
-#markdownBody .sidenote.displaced .footnote-back svg {
-	transition:
-		transform 0.25s ease-out;
-}
 #markdownBody .sidenote.hidden {
     display: none;
 }
@@ -4247,6 +4243,14 @@ a.footnote-back {
     left: -1px;
 }
 
+/*=------------------------------------------=*/
+/*= Sidenote back-to-citation links (arrows) =*/
+/*=------------------------------------------=*/
+
+#markdownBody .sidenote .footnote-back svg {
+	transition:
+		transform 0.25s ease-out;
+}
 
 /**********/
 /* FOOTER */
