--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2730,18 +2730,18 @@ ul.interview .speaker {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -4030,10 +4030,6 @@ a.footnote-back {
         opacity 0.25s ease-out,
         transform 0.25s ease-out;
 }
-#markdownBody .sidenote.displaced .footnote-back svg {
-	transition:
-		transform 0.25s ease-out;
-}
 #markdownBody .sidenote.hidden {
     display: none;
 }
@@ -4247,6 +4243,14 @@ a.footnote-back {
     left: -1px;
 }
 
+/*=------------------------------------------=*/
+/*= Sidenote back-to-citation links (arrows) =*/
+/*=------------------------------------------=*/
+
+#markdownBody .sidenote .footnote-back svg {
+	transition:
+		transform 0.25s ease-out;
+}
 
 /**********/
 /* FOOTER */
@@ -5855,7 +5859,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -6041,7 +6045,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6554,7 +6558,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -7566,7 +7570,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#question');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7770,7 +7774,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 .image-wrapper.focusable.small-image::after {
     content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#magnifying-glass-plus-light');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#magnifying-glass-plus-light');
     background-size: 56px 56px;
     background-origin: content-box;
     background-repeat: no-repeat;
@@ -8296,7 +8300,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1740442466#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1740602315#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -8377,7 +8381,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 .markdownBody div.block-context-highlighted .block-context-highlight-here::before,
 .markdownBody :not(a) > span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1740442466#manicule-right');
+    background-image: url('/static/img/icon/icons.svg?v=1740602315#manicule-right');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
