--- a/css/default.css
+++ b/css/default.css
@@ -2869,10 +2869,6 @@ a.footnote-back {
         opacity 0.25s ease-out,
         transform 0.25s ease-out;
 }
-#markdownBody .sidenote.displaced .footnote-back svg {
-	transition:
-		transform 0.25s ease-out;
-}
 #markdownBody .sidenote.hidden {
     display: none;
 }
@@ -3086,6 +3082,14 @@ a.footnote-back {
     left: -1px;
 }
 
+/*=------------------------------------------=*/
+/*= Sidenote back-to-citation links (arrows) =*/
+/*=------------------------------------------=*/
+
+#markdownBody .sidenote .footnote-back svg {
+	transition:
+		transform 0.25s ease-out;
+}
 
 /**********/
 /* FOOTER */
