--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -7018,7 +7018,11 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     width: var(--toolbar-button-size);
     bottom: calc(0.5em - var(--toolbar-offset-y));
     right:  calc(0.5em - var(--toolbar-offset-x));
+	transition:
+		bottom 0.2s ease-out,
+		right 0.2s ease-out;
 }
+
 
 #page-toolbar.mobile .widgets {
     flex-flow: column;
@@ -7069,6 +7073,22 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 #page-toolbar.collapsed:hover {
     transition:
         opacity 0.15s ease;
+}
+
+/****************************************/
+/*	Special case (mobile fade on scroll).
+ */
+#page-toolbar.mobile.collapsed {
+	transition:
+        opacity 2s ease-out,
+		bottom 0.2s ease-out,
+		right 0.2s ease-out;
+}
+#page-toolbar.mobile.collapsed:hover {
+	transition:
+        opacity 0.15s ease,
+		bottom 0.2s ease-out,
+		right 0.2s ease-out;
 }
 
 /**********************/
@@ -7809,7 +7829,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     box-sizing: border-box;
     box-shadow: 0 2px 6px var(--GW-floating-header-box-shadow-color);
     transition:
-        top 0.2s ease-out;
+        bottom 0.2s ease-out;
 }
 
 #floating-header.hidden {
@@ -8747,28 +8767,28 @@ a[data-link-icon-type*='svg']:hover .link-icon-hook::after {
     opacity: calc(var(--link-icon-opacity) * 0.55);
 }
 
-/*	Quad-letter (rendered) SVG icons.
+/*  Quad-letter (rendered) SVG icons.
  */
 a[data-link-icon-type*='svg'][data-link-icon-type*='quad'] {
-	--link-icon-size: 0.75em;
-	--link-icon-offset-x: 0.15em;
-	--link-icon-offset-y: 0.35em;
-	--link-icon-opacity: 0.80;
+    --link-icon-size: 0.75em;
+    --link-icon-offset-x: 0.15em;
+    --link-icon-offset-y: 0.35em;
+    --link-icon-opacity: 0.80;
 }
 a[data-link-icon-type*='svg'][data-link-icon-type*='quad'] .link-icon-hook::after {
     background-position-y: 0.9ex;
 }
 
-/*	Quad-letter (rendered) SVG icons in a sans-serif font.
+/*  Quad-letter (rendered) SVG icons in a sans-serif font.
  */
 a[data-link-icon-type*='svg'][data-link-icon-type*='quad'][data-link-icon-type*='sans'] {
-	--link-icon-size: 0.80em;
+    --link-icon-size: 0.80em;
 }
 
-/*	Quad-letter (rendered) SVG icons in a monospaced font.
+/*  Quad-letter (rendered) SVG icons in a monospaced font.
  */
 a[data-link-icon-type*='svg'][data-link-icon-type*='quad'][data-link-icon-type*='mono'] {
-	--link-icon-size: 0.85em;
+    --link-icon-size: 0.85em;
 }
 
 /*  Colored graphical link icons.
@@ -8853,13 +8873,13 @@ a[data-link-icon-type*='tri'] {
     --link-icon-opacity: 0.90;
 }
 
-/*	Tri-letter icons in a sans face.
+/*  Tri-letter icons in a sans face.
  */
 a[data-link-icon-type*='tri'][data-link-icon-type*='mono'] {
-	/*	Nothing, for now. */
+    /*  Nothing, for now. */
 }
 
-/*	Tri-letter icons in a monospaced face.
+/*  Tri-letter icons in a monospaced face.
  */
 a[data-link-icon-type*='tri'][data-link-icon-type*='mono'] {
     --link-icon-opacity: 0.7;
@@ -8867,8 +8887,8 @@ a[data-link-icon-type*='tri'][data-link-icon-type*='mono'] {
 
 /*  Quad-letter ‘quad’ square icons.
 
-	NOTE: Currently unused, due to SVG rendering of quad icons.
-		—SA 2025-02-25
+    NOTE: Currently unused, due to SVG rendering of quad icons.
+        —SA 2025-02-25
  */
 a[data-link-icon-type*='text'][data-link-icon-type*='quad'] .link-icon-hook::after {
     text-indent: 0;
@@ -8887,17 +8907,17 @@ a[data-link-icon-type*='text'][data-link-icon-type*='quad'] .link-icon-hook::aft
 
 /*  Quad-letter square icons in a sans face.
 
-	NOTE: Currently unused, due to SVG rendering of quad icons.
-		—SA 2025-02-25
+    NOTE: Currently unused, due to SVG rendering of quad icons.
+        —SA 2025-02-25
     */
 a[data-link-icon-type*='text'][data-link-icon-type*='quad'][data-link-icon-type*='sans'] .link-icon-hook::after {
-	/*	Nothing, for now. */
+    /*  Nothing, for now. */
 }
 
 /*  Quad-letter square icons in a monospaced face.
 
-	NOTE: Currently unused, due to SVG rendering of quad icons.
-		—SA 2025-02-25
+    NOTE: Currently unused, due to SVG rendering of quad icons.
+        —SA 2025-02-25
     */
 a[data-link-icon-type*='text'][data-link-icon-type*='quad'][data-link-icon-type*='mono'] .link-icon-hook::after {
     line-height: 0.90;
@@ -9190,6 +9210,11 @@ a[data-link-icon='☯'] { /* Touhou Wiki */
     --link-icon-offset-x: 0.15em;
     --link-icon-offset-y: 0.20em;
 }
+
+a[data-link-icon='jt'] { /* Japan Times */
+    --link-icon-offset-x: 0.20em;
+}
+
 
 /***********************************/
 /*  Quad-letter ‘quad’ square icons.
@@ -9656,6 +9681,16 @@ a[data-link-icon='✤'] { /* Ganbreeder/Artbreeder */
 
 a[data-link-icon='☤'] { /* Karolinska */
     --link-icon-opacity: 0.50;
+}
+
+a[data-link-icon='sourceforge'] {
+    --link-icon-size: 0.8em;
+    --link-icon-offset-x: 0.10em;
+}
+
+a[data-link-icon='worldcat'] {
+    --link-icon-size: 0.70em;
+    --link-icon-offset-x: 0.10em;
 }
 
 /*=------------------=*/
