--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2657,6 +2657,14 @@ ul.interview .speaker {
     }
 }
 
+/*	“Poem”-style epigraphs.
+ */
+.epigraph.poem p {
+	text-align: left;
+	text-indent: -2.5em;
+	padding-left: 2.5em;
+}
+
 
 /***************/
 /* ADMONITIONS */
@@ -8208,7 +8216,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     width: 1.10em;
 }
 .help-mode-selector-inline {
-    width: 0.85em;
+    width: 0.80em;
 }
 .toolbar-mode-selector-inline {
     width: 1.50em;
@@ -8230,7 +8238,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 		width: 1.100em;
 	}
 	.help-mode-selector-inline {
-		width: 0.850em;
+		width: 0.800em;
 	}
 	.toolbar-mode-selector-inline {
 		width: 1.500em;
